# leanloop

./: .gitignore  LICENSE  README.md  config.toml  leanfile.toml  leanloop.py  pyproject.toml
examples/: README.md
examples/go-test/: leanfile.toml
examples/js-jest/: leanfile.toml
examples/python-pytest/: leanfile.toml
lean-mcp/: indexer.py  server.py  todo.txt
leaners/: aider.sh  claude.sh  gemini.sh  opencode.sh  qwen-ctx.sh  qwen.sh
playground/demo/: README.md  leanfile.toml  mathutils.py  stringutils.py  test_mathutils.py  test_stringutils.py
tests/: conftest.py  test_leanloop.py
