[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lean-loop"
version = "0.1.0"
description = "A small auto-fix loop that drives a swappable agent-CLI wrapper with a lean per-task context."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Eric Diaz"}]
keywords = ["llm", "auto-fix", "agent", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
lean-loop = "leanloop:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
py-modules = ["leanloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
